--- a/.github/workflows/callWorkflow.yml
+++ b/.github/workflows/callWorkflow.yml
@@ -7,5 +7,5 @@ permissions: write-all
 
 jobs:
   call-workflow2-1:
-    uses: santhu736852/TestWorkflow/.github/workflows/test-workflow2.yml@main
+    uses: santhu736852/TestWorkflow/.github/workflows/test-workflow2.yml@TestBranch
     secrets: inherit
